--- a/.gitignore
+++ b/.gitignore
@@ -99,6 +99,15 @@ Thumbs.db
 *.tmp
 *.temp
 
+# Playground / Scratch files
+# Ignore everything in playground except documentation
+playground/*
+!playground/.gitkeep
+!playground/README.md
+!playground/.env.example
+!playground/example_quick_test.py
+scratch/
+
 # AI Coding Tools - Project-specific configs
 # Developers should symlink or copy AGENTS.md and add their own overrides locally
 .claude/
