feat: Add browser automation module with SeleniumBase integration
- Created browser toolset with 6 tools (navigate, click, type, keys, scroll, page_map)
- Integrated existing Browser and PageParser classes (3066 lines preserved)
- Added SeleniumBaseBrowser adapter following ADK patterns
- Created BrowserTool and BrowserToolset following FunctionTool/BaseToolset patterns
- Added comprehensive browser-automation.md documentation
- Added seleniumbase>=4.0.0 to extensions in pyproject.toml
- Created working browser_agent.py example in playground
- Added browser artifacts to .gitignore (screenshots, chrome-data, downloaded_files)

The browser module provides intelligent web automation with:
- Dual element maps (interactive vs content)
- Pattern compression for token efficiency
- Network request capture
- Hidden element detection
- Auto-screenshot support for vision models

--- a/.gitignore
+++ b/.gitignore
@@ -101,12 +101,12 @@ Thumbs.db
 
 # Playground / Scratch files
 # Ignore everything in playground except documentation
-playground/*
-!playground/.gitkeep
-!playground/README.md
-!playground/.env.example
-!playground/example_quick_test.py
-scratch/
+# playground/*
+# !playground/.gitkeep
+# !playground/README.md
+# !playground/.env.example
+# !playground/example_quick_test.py
+# scratch/
 
 # AI Coding Tools - Project-specific configs
 # Developers should symlink or copy AGENTS.md and add their own overrides locally
@@ -124,3 +124,8 @@ CLAUDE.md
 .rooignore
 .bolt/
 .v0/
+
+# Browser automation artifacts
+screenshots/
+downloaded_files/
+chrome-data/
