--- a/pyproject.toml
+++ b/pyproject.toml
@@ -154,6 +154,7 @@ extensions = [
   "llama-index-readers-file>=0.4.0",            # For retrieval using LlamaIndex.
   "llama-index-embeddings-google-genai>=0.3.0", # For files retrieval using LlamaIndex.
   "lxml>=5.3.0",                                # For load_web_page tool.
+  "seleniumbase>=4.0.0",                        # For browser automation tools
   "toolbox-core>=0.1.0",                        # For tools.toolbox_toolset.ToolboxToolset
 ]
 
